# 2024_Capstone_AMRTractor

./: Camera_depth_point  Hook_arduino  Kim_Aruco.py  QRcode_check.py  QRcode_point.py  README.md  Yaw_publish  lidar_filtering.py  teleop_test.ino  teleop_test.py  webcam_realsense.py
2024_capstone_ros1/hybrid_astar/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
2024_capstone_ros1/hybrid_astar/cfg/: constants.cfg
2024_capstone_ros1/hybrid_astar/include/: algorithm.h  collisiondetection.h  constants.h  dynamicvoronoi.h  global_plugin.h  lookup.h  node2d.h  node3d.h  path.h  planner.h  smoother.h  vector2d.h  visualize.h
2024_capstone_ros1/hybrid_astar/launch/: config.rviz  config_simul.rviz  manual.launch  simul.launch
2024_capstone_ros1/hybrid_astar/maps/: map.yaml
2024_capstone_ros1/hybrid_astar/src/: algorithm.cpp  collisiondetection.cpp  dynamicvoronoi.cpp  global_plugin.cpp  main.cpp  node3d.cpp  path.cpp  planner.cpp  smoother.cpp  tf_broadcaster.cpp  visualize.cpp
2024_capstone_ros1/params/: bridge.yaml  topics.yaml
IMU_Read_forAll/: IMU_Read_forAll.ino
Kim_ws/src/: image_subscriber.py  kim_teleop_leo.py  leo_Aruco.py  (+1 more)
Tractor_GUI/: circularbuttonh.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
cartographer_2dslam/: CMakeLists.txt  package.xml
docking_pkg/: leo_teleop_test.py
gripper_imu_hook_leo/: 2024_test.ino  Gripper.cpp  Gripper.h  Hook.cpp  Hook.h  gripper.ino  gripper_imu_hook_leo.ino
hook_arduino/: hook_arduino.ino
leo_gazebo_simulation/: CMakeLists.txt  package.xml
ssctractor/: setup.cfg  setup.py
(+259 files in other folders)
