<?xml version="1.0"?>
<package>
  <name>hybrid_astar</name>
  <version>0.0.2</version>
  <description>The hybrid_astar package</description>
  <maintainer email="kurzer@kth.se">Karl Kurzer</maintainer>
  <license>BSD</license>
  <author email="kurzer@kth.se">Karl Kurzer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_perceptions</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>laser_perceptions</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

 
  <export>
    <nav_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
</package>
